# SR-Compiler

./: CMakeLists.txt  README.md
SRCompiler/: CMakeLists.txt
SRCompiler/include/: ECompilerMode.h  HeaderAnalyser.h  HeaderCompiler.h  HeaderPreprocessor.h  HeaderSynthesizer.h  KeywordPool.h  MapCompiler.h  PreProcessor.h  SRCompiler.h  TokenStore.h  TokenTypes.h
SRCompiler/src/: HeaderAnalyser.cpp  HeaderCompiler.cpp  HeaderPreprocessor.cpp  HeaderSynthesizer.cpp  MapCompiler.cpp  PreProcessor.cpp  SRCompiler.cpp  TokenStore.cpp
SRCompiler/test/: TestActor_1.h  TestActor_2.h  TestComponent3.h  TestComponent_1.h  TestComponent_2 - Copy.h
test/: CMakeLists.txt  ParserTest.cpp
